# dino

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
dino/: __init__.py
src/dino/: __init__.py  dino.py
tests/: test_dino.py
