[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dinocore"
version = "1.3.0"
authors = [
  { name="Alp Sakaci", email="erenalpsakaci@gmail.com" },
]
description = "dynamic config management tool"
readme = "README.md"
requires-python = ">=3.6"
classifiers = []
dependencies = [
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "--cov=src --cov-report=html"
